re-arrange config
