# o3api/plots.py
@@ -24,6 +24,17 @@ from functools import wraps
 logger = logging.getLogger('__name__') #o3api
 logger.setLevel(cfg.log_level)
 
+# configuration for netCDF
+TIME = cfg.netCDF_conf['t_c']
+LAT = cfg.netCDF_conf['lat_c']
+TCO3 = cfg.netCDF_conf['tco3']
+VMRO3 = cfg.netCDF_conf['vmro3']
+TCO3Return = cfg.netCDF_conf['tco3_r']
+
+# configuration for API
+api_c = cfg.api_conf
+
+
 def _profile(func):
     """Decorate function for profiling
     """
@@ -48,11 +59,11 @@ def set_data_processing(plot_type, **kwargs):
     :param plot_type: The plot type (e.g. tco3_zm, vmro3_zm, ...)
     :return: object corresponding to the plot type
     """
-    if plot_type == 'tco3_zm':
+    if plot_type == TCO3:
         data = ProcessForTCO3(**kwargs)
-    elif plot_type == 'vmro3_zm':
+    elif plot_type == VMRO3:
         data = ProcessForVMRO3(**kwargs)
-    elif plot_type == 'tco3_return':
+    elif plot_type == TCO3Return:
         data = ProcessForTCO3Return(**kwargs)
         
     return data
@@ -98,14 +109,15 @@ class Dataset:
         chunk_size = int(os.getenv('O3API_CHUNK_SIZE', -1))
 
         if chunk_size > 0:
-            ds = xr.open_mfdataset(self._datafiles, chunks={'lat': chunk_size },
-                                   concat_dim='time',
+            ds = xr.open_mfdataset(self._datafiles, 
+                                   chunks={LAT: chunk_size },
+                                   concat_dim=TIME,
                                    data_vars='minimal', coords='minimal',
                                    parallel=False)
         else:
             ds = xr.open_mfdataset(self._datafiles,
-                                   concat_dim='time',
-                                   data_vars='minimal', 
+                                   concat_dim=TIME,
+                                   data_vars='minimal',
                                    coords='minimal',
                                    parallel=False)
         return ds
@@ -114,9 +126,9 @@ class Dataset:
 class DataSelection(Dataset):
     """Class to perform data selection, based on :class:`Dataset`.
 
-    :param b_year: Year to start data scanning from
-    :param e_year: Year to finish data scanning
-    :param months: Months to select, if not a whole year
+    :param begin: Year to start data scanning from
+    :param end: Year to finish data scanning
+    :param month: Month(s) to select, if not a whole year
     :param lat_min: Minimum latitude to define the range (-90..90)
     :param lat_max: Maximum latitude to define the range (-90..90)
     """
@@ -125,11 +137,11 @@ class DataSelection(Dataset):
         """Constructor method
         """
         super().__init__(plot_type, **kwargs)
-        self.b_year = kwargs['begin_year']
-        self.e_year = kwargs['end_year']
-        self.months = kwargs['months']
-        self.lat_min = kwargs['lat_min']
-        self.lat_max = kwargs['lat_max']
+        self.begin = kwargs[api_c['begin']]
+        self.end = kwargs[api_c['end']]
+        self.month = kwargs[api_c['month']]
+        self.lat_min = kwargs[api_c['lat_min']]
+        self.lat_max = kwargs[api_c['lat_max']]
 
     def __check_latitude_order(self, ds):
         """Function to check the latitude order, 
@@ -139,8 +151,8 @@ class DataSelection(Dataset):
         :return: lat_0, lat_last
         """
         # check in what order latitude is used, e.g. (-90..90) or (90..-90)
-        lat_0 = np.amin(ds.coords['lat'].values[0]) # min latitude
-        lat_last = np.amax(ds.coords['lat'].values[-1]) # max latitude
+        lat_0 = np.amin(ds.coords[LAT].values[0]) # min latitude
+        lat_last = np.amax(ds.coords[LAT].values[-1]) # max latitude
 
         if lat_0 < lat_last:
             lat_a = self.lat_min
@@ -172,23 +184,27 @@ class DataSelection(Dataset):
         # BUG(?) ccmi-umukca-ucam complains about 31-12-year, but 30-12-year works
         # CFTime360day date format has 30 days for every month???
         # {}-01-01T00:00:00 .. {}-12-30T23:59:59
-        if len(self.months) > 0:
-            ds = ds.sel(time=ds.time.dt.month.isin(self.months))
+        if len(self.month) > 0:
+            ds = ds.sel(time=ds.time.dt.month.isin(self.month))
 
-        ds_slice = ds.sel(time=slice("{}-01".format(self.b_year), 
-                                     "{}-12".format(self.e_year)),
+        ds_slice = ds.sel(time=slice("{}-01".format(self.begin), 
+                                     "{}-12".format(self.end)),
                           lat=slice(lat_a,
                                     lat_b))  # latitude
         return ds_slice
         
     def get_1980slice(self, model):
-        """
+        """Function to select the slice for 1980 (reference year) 
+ 
+        :param model: The model to process
+        :return: xarray dataset selected according to the time and latitude
+        :rtype: xarray
         """
         ds = super().get_dataset(model)
         # check in what order latitude is used, return them correspondently
         lat_a, lat_b = self.__check_latitude_order(ds)
-        if len(self.months) > 0:
-            ds = ds.sel(time=ds.time.dt.month.isin(self.months))        
+        if len(self.month) > 0:
+            ds = ds.sel(time=ds.time.dt.month.isin(self.month))        
         ds_1980 = ds.sel(time=slice("1980-01", "1980-12"), 
                          lat=slice(lat_a, lat_b))  # latitude
         return ds_1980
@@ -198,7 +214,7 @@ class ProcessForTCO3(DataSelection):
     """Subclass of :class:`DataSelection` to calculate tco3_zm
     """
     def __init__(self, **kwargs):
-        super().__init__('tco3_zm', **kwargs)
+        super().__init__(TCO3, **kwargs)
         
     def __to_pd_series(self, ds, model):
         """Convert xarray to pandas series
@@ -210,13 +226,13 @@ class ProcessForTCO3(DataSelection):
         """
 
         # convert to pandas series to keep date information
-        if (type(ds.indexes['time']) is 
+        if (type(ds.indexes[TIME]) is 
             pd.core.indexes.datetimes.DatetimeIndex) :
-            time_axis = ds.indexes['time'].values
+            time_axis = ds.indexes[TIME].values
         else:
-            time_axis = ds.indexes['time'].to_datetimeindex()
+            time_axis = ds.indexes[TIME].to_datetimeindex()
 
-        curve = pd.Series(np.nan_to_num(ds['tco3_zm']),
+        curve = pd.Series(np.nan_to_num(ds[TCO3]),
                           index=pd.DatetimeIndex(time_axis),
                           name=model)
         return curve
@@ -230,7 +246,7 @@ class ProcessForTCO3(DataSelection):
         """
         # data selection according to time and latitude
         ds_slice = super().get_dataslice(model)
-        ds_tco3 = ds_slice[["tco3_zm"]].mean(dim=['lat'])
+        ds_tco3 = ds_slice[[TCO3]].mean(dim=[LAT])
         logger.debug("ds_tco3: {}".format(ds_tco3))
 
         curve = self.__to_pd_series(ds_tco3, model)
@@ -263,10 +279,9 @@ class ProcessForTCO3(DataSelection):
         """
         # data selection according to 1980 and latitude
         ds_slice = super().get_1980slice(model)
-        ds_tco3_1980 = ds_slice[["tco3_zm"]].mean(dim=['lat'])
+        ds_tco3_1980 = ds_slice[[TCO3]].mean(dim=[LAT])
         #logger.debug("ds_tco3_1980: {}".format(ds_tco3_1980.to_dataframe()))
         ref1980 = ds_tco3_1980.to_dataframe().mean().values[0]
-        #logger.debug(F"ref1980: {ref1980}")
 
         return ref1980
 
@@ -275,7 +290,7 @@ class ProcessForVMRO3(DataSelection):
     """Subclass of :class:`DataSelection` to calculate vmro3_zm
     """
     def __init__(self, **kwargs):
-        super().__init__('vmro3_zm', **kwargs)
+        super().__init__(VMRO3, **kwargs)
 
     def get_plot_data(self, model):
         """Process the model to get vmro3_zm data for plotting
@@ -288,17 +303,17 @@ class ProcessForVMRO3(DataSelection):
         ds_slice = super().get_dataslice(model)
         # currently placeholder. another calculation might be needed
         # 20-10-07 vkoz
-        ds_vmro3 = ds_slice[["vmro3_zm"]]
+        ds_vmro3 = ds_slice[[VMRO3]]
         logger.debug("ds_vmro3: {}".format(ds_vmro3))
 
-        return ds_vmro3.mean(dim=['lat'])
+        return ds_vmro3.mean(dim=[LAT])
         
 
 class ProcessForTCO3Return(DataSelection):
     """Subclass of :class:`DataSelection` to calculate tco3_return
     """
     def __init__(self, **kwargs):
-        super().__init__('tco3_return', **kwargs)
+        super().__init__(TCO3Return, **kwargs)
 
     def get_plot_data(self, model):
         """Process the model to get tco3_return data for plotting
@@ -311,7 +326,7 @@ class ProcessForTCO3Return(DataSelection):
         ds_slice = super().get_dataslice(model)
         # currently placeholder. another calculation might be needed
         # 20-10-07 vkoz
-        ds_tco3_return = ds_slice[["tco3_return"]]
+        ds_tco3_return = ds_slice[[TCO3Return]]
         logger.debug("ds_tco3_return: {}".format(ds_tco3_return))
 
-        return ds_tco3_return.mean(dim=['lat'])
+        return ds_tco3_return.mean(dim=[LAT])
